--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 31 07:05:04 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
+         Last Run: Tue Oct 23 21:29:26 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -29,52 +29,52 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>16</td>
-                        <td>41</td>
-                        <td>2</td>
-                        <td>16</td>
-                        <td>SE</td>
-                        <td>50</td>
-                     </tr>
-                     <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>23</td>
-                        <td>45</td>
-                        <td>1</td>
-                        <td>16</td>
-                        <td>SE</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>11</td>
+                        <td>57</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WNW</td>
                         <td>64</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>8</td>
                         <td>6</td>
-                        <td>54</td>
+                        <td>3</td>
+                        <td>62</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>SE</td>
-                        <td>59</td>
+                        <td>10</td>
+                        <td>WNW</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>3</td>
-                        <td>59</td>
+                        <td>7</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>SE</td>
-                        <td>53</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>58</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>6</td>
+                        <td>4</td>
+                        <td>2</td>
+                        <td>68</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>W</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,10 +107,10 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM",
-             "09:00 PM"
+             "09:00 PM",
+             "10:00 PM"
            ],
            "datasets":[
              {
@@ -119,10 +119,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
-                 "24",
-                 "21",
-                 "20"
+                 "9",
+                 "6",
+                 "5",
+                 "4"
                ]
              },
              {
@@ -131,10 +131,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
-                 "24",
-                 "21",
-                 "20"
+                 "9",
+                 "8",
+                 "7",
+                 "6"
                ]
              }
            ]
@@ -175,10 +175,10 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM",
-             "09:00 PM"
+             "09:00 PM",
+             "10:00 PM"
            ],
            "datasets":[
              {
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
-                 "23",
-                 "6",
-                 "3"
+                 "11",
+                 "3",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "41",
-                 "45",
-                 "54",
-                 "59"
+                 "57",
+                 "62",
+                 "66",
+                 "68"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
                  "64",
-                 "59",
-                 "53"
+                 "53",
+                 "58",
+                 "56"
                ]
              }
            ]
