--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 23 22:05:04 2018</p>
+         Last Run: Tue Oct 23 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -30,27 +30,27 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>9</td>
-                        <td>9</td>
-                        <td>11</td>
-                        <td>57</td>
+                        <td>Partly Cloudy</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>64</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>3</td>
-                        <td>62</td>
+                        <td>2</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>53</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>7</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>6</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>56</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,7 +119,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "9",
+                 "10",
                  "6",
                  "5",
                  "4"
@@ -131,7 +131,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "9",
+                 "10",
                  "8",
                  "7",
                  "6"
@@ -186,8 +186,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
-                 "3",
+                 "10",
+                 "2",
                  "2",
                  "2"
                ]
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "62",
-                 "66",
-                 "68"
+                 "54",
+                 "59",
+                 "64",
+                 "69"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
-                 "53",
-                 "58",
-                 "56"
+                 "55",
+                 "49",
+                 "46",
+                 "42"
                ]
              }
            ]
