--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 23 23:05:03 2018</p>
+         Last Run: Wed Oct 24 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -30,27 +30,27 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>10</td>
-                        <td>54</td>
+                        <td>3</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>55</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>2</td>
+                        <td>7</td>
                         <td>59</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WNW</td>
-                        <td>49</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>7</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>46</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>42</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -186,8 +186,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
-                 "2",
+                 "3",
+                 "7",
                  "2",
                  "2"
                ]
@@ -197,9 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "53",
                  "59",
-                 "64",
+                 "65",
                  "69"
                ]
              },
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
+                 "60",
+                 "53",
                  "49",
-                 "46",
-                 "42"
+                 "48"
                ]
              }
            ]
