--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 24 01:05:03 2018</p>
+         Last Run: Wed Oct 24 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -33,48 +33,48 @@
                         <td>Mostly Cloudy</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>3</td>
-                        <td>52</td>
+                        <td>21</td>
+                        <td>51</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WNW</td>
-                        <td>60</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>7</td>
+                        <td>24</td>
                         <td>58</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WNW</td>
-                        <td>53</td>
+                        <td>W</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>7</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>64</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>49</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
+                        <td>8</td>
                         <td>6</td>
-                        <td>4</td>
-                        <td>2</td>
-                        <td>69</td>
+                        <td>18</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>47</td>
+                        <td>71</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>7</td>
+                        <td>5</td>
+                        <td>15</td>
+                        <td>68</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>W</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,8 +121,8 @@
                "data":[
                  "10",
                  "6",
-                 "5",
-                 "4"
+                 "6",
+                 "5"
                ]
              },
              {
@@ -133,8 +133,8 @@
                "data":[
                  "10",
                  "8",
-                 "7",
-                 "6"
+                 "8",
+                 "7"
                ]
              }
            ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "7",
-                 "2",
-                 "2"
+                 "21",
+                 "24",
+                 "18",
+                 "15"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
+                 "51",
                  "58",
-                 "64",
-                 "69"
+                 "63",
+                 "68"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
-                 "53",
-                 "49",
-                 "47"
+                 "68",
+                 "71",
+                 "71",
+                 "66"
                ]
              }
            ]
