--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 24 02:05:04 2018</p>
+         Last Run: Wed Oct 24 03:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -42,10 +42,10 @@
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>24</td>
+                        <td>30</td>
                         <td>58</td>
                         <td>0</td>
                         <td>11</td>
@@ -187,7 +187,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "21",
-                 "24",
+                 "30",
                  "18",
                  "15"
                ]
