--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 24 04:05:04 2018</p>
+         Last Run: Wed Oct 24 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -33,48 +33,48 @@
                         <td>Mostly Cloudy</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>21</td>
+                        <td>24</td>
                         <td>51</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>68</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>24</td>
-                        <td>58</td>
+                        <td>Chance of Rain</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>30</td>
+                        <td>57</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>71</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>63</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>71</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>15</td>
-                        <td>68</td>
+                        <td>13</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>66</td>
+                        <td>63</td>
                      </tr>
                   </tbody>
                </table>
@@ -120,7 +120,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "10",
-                 "6",
+                 "9",
                  "6",
                  "5"
                ]
@@ -132,7 +132,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "10",
-                 "8",
+                 "9",
                  "8",
                  "7"
                ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "21",
                  "24",
-                 "18",
-                 "15"
+                 "30",
+                 "16",
+                 "13"
                ]
              },
              {
@@ -198,9 +198,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "51",
-                 "58",
+                 "57",
                  "63",
-                 "68"
+                 "67"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "68",
-                 "71",
-                 "71",
-                 "66"
+                 "67",
+                 "70",
+                 "70",
+                 "63"
                ]
              }
            ]
