--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 24 08:05:03 2018</p>
+         Last Run: Wed Oct 24 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -43,38 +43,38 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>8</td>
-                        <td>6</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>24</td>
-                        <td>59</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>19</td>
-                        <td>64</td>
+                        <td>7</td>
+                        <td>5</td>
+                        <td>17</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>70</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>7</td>
-                        <td>5</td>
-                        <td>15</td>
-                        <td>68</td>
+                        <td>Partly Cloudy</td>
+                        <td>6</td>
+                        <td>4</td>
+                        <td>14</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>64</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -120,9 +120,9 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "10",
-                 "6",
-                 "6",
-                 "5"
+                 "9",
+                 "5",
+                 "4"
                ]
              },
              {
@@ -132,9 +132,9 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "10",
-                 "8",
-                 "8",
-                 "7"
+                 "9",
+                 "7",
+                 "6"
                ]
              }
            ]
@@ -188,8 +188,8 @@
                "data":[
                  "24",
                  "24",
-                 "19",
-                 "15"
+                 "17",
+                 "14"
                ]
              },
              {
@@ -198,9 +198,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "51",
-                 "59",
-                 "64",
-                 "68"
+                 "57",
+                 "63",
+                 "66"
                ]
              },
              {
@@ -209,9 +209,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "65",
-                 "69",
-                 "70",
-                 "64"
+                 "68",
+                 "65",
+                 "58"
                ]
              }
            ]
