--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 24 13:05:13 2018</p>
+         Last Run: Wed Oct 24 14:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -33,48 +33,48 @@
                         <td>Mostly Cloudy</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>18</td>
-                        <td>51</td>
+                        <td>12</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>71</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>24</td>
-                        <td>58</td>
+                        <td>15</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>76</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>18</td>
-                        <td>63</td>
+                        <td>17</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>15</td>
-                        <td>67</td>
+                        <td>14</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>49</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
-                 "24",
-                 "18",
-                 "15"
+                 "12",
+                 "15",
+                 "17",
+                 "14"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "58",
-                 "63",
-                 "67"
+                 "53",
+                 "62",
+                 "68",
+                 "70"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "71",
-                 "76",
-                 "58",
-                 "49"
+                 "75",
+                 "72",
+                 "63",
+                 "50"
                ]
              }
            ]
@@ -223,6 +223,7 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
    </body>
