--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 24 14:05:04 2018</p>
+         Last Run: Wed Oct 24 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -30,51 +30,51 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>12</td>
-                        <td>53</td>
+                        <td>0</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>75</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>15</td>
-                        <td>62</td>
+                        <td>3</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>72</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>17</td>
-                        <td>68</td>
+                        <td>3</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>63</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>14</td>
+                        <td>3</td>
                         <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>50</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
-                 "15",
-                 "17",
-                 "14"
+                 "0",
+                 "3",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -197,9 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "62",
-                 "68",
+                 "54",
+                 "63",
+                 "69",
                  "70"
                ]
              },
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "72",
-                 "63",
-                 "50"
+                 "59",
+                 "51",
+                 "41",
+                 "29"
                ]
              }
            ]
